# omnicrack30k

./: .gitmodules  README.md  checksums_annotations.json  checksums_images.json  pyproject.toml  requirements.txt
src/omnicrack30k/: evaluation.py  inference.py
src/omnicrack30k/conversion/: checksums.py
src/omnicrack30k/dataset/images/train/: placeholder.txt
src/omnicrack30k/importers/: ceramic.py  cfd.py  masonry.py  s2ds.py  uav75.py
